--- a/Chart.yaml
+++ b/Chart.yaml
@@ -27,11 +27,11 @@ dependencies:
   - name: "terraform-specific-provisioner"
     condition: terraform-specific-provisioner.enabled
     repository: "https://gitlab.com/api/v4/projects/44077776/packages/helm/devel"
-    version: "0.0.0-SNAPSHOT-6303f3dfc2.wit-2108-add-princip"
+    version: "0.0.0-SNAPSHOT-ab72f35f47.logging-in-real-time"
   - name: "adls-gen2"
     condition: adls-gen2.enabled
     repository: "https://gitlab.com/api/v4/projects/55880667/packages/helm/devel"
-    version: "0.0.0-SNAPSHOT-9735ae76dd.wip"
+    version: "0.0.0-SNAPSHOT-634ce6161f.resolve-wit-2447-upd"
 
 maintainers:
   - name: Agile Lab
