--- a/values.yaml
+++ b/values.yaml
@@ -27,6 +27,21 @@ adls-gen2:
     # -- The Name of the Storage Container within the Storage Account
     container_name: ""
 
+adls-gen2-import:
+  # -- Include the TF module to create the Storage Account - Import
+  enabled: true
+
+  fullnameOverride: &adls-module-import "adls-gen2-import"
+
+  # -- Terraform Remote State configuration
+  state:
+    # -- The Name of the Resource Group in which the Storage Account exists
+    resource_group_name: ""
+    # -- The Name of the Storage Account
+    storage_account_name: ""
+    # -- The Name of the Storage Container within the Storage Account
+    container_name: ""
+
 
 terraform-specific-provisioner:
   # -- Switch to enable or disable the Terraform specific provisioner helm chart
@@ -91,11 +106,17 @@ terraform-specific-provisioner:
       configMap:
         name: *adls-module
         defaultMode: 420
+    - name: *adls-module-import
+      configMap:
+        name: *adls-module-import
+        defaultMode: 420
 
   # -- define extra volume mounts
   extraVolumeMounts:
     - name: *adls-module
       mountPath: /tf/adls-gen2
+    - name: *adls-module-import
+      mountPath: /tf/adls-gen2-import
 
   # -- readiness probe spec
   readinessProbe: {}
@@ -136,6 +157,37 @@ terraform-specific-provisioner:
             component_name = "$.dataProduct.components[?(@.id == '{{componentIdToProvision}}')].specific.component.name"
             resource_group = "$.dataProduct.components[?(@.id == '{{componentIdToProvision}}')].specific.resourceGroup"
             environment = "$.dataProduct.environment"
+            account_tier = "$.dataProduct.components[?(@.id == '{{componentIdToProvision}}')].specific.performance"
+            account_replication_type = "$.dataProduct.components[?(@.id == '{{componentIdToProvision}}')].specific.redundancy"
+            access_tier = "$.dataProduct.components[?(@.id == '{{componentIdToProvision}}')].specific.accessTier"
+            infrastructure_encryption_enabled = "$.dataProduct.components[?(@.id == '{{componentIdToProvision}}')].specific.infrastructureEncryptionEnabled"
+            allow_nested_items_to_be_public = "$.dataProduct.components[?(@.id == '{{componentIdToProvision}}')].specific.allowNestedItemsToBePublic"
+            containers = "$.dataProduct.components[?(@.id == '{{componentIdToProvision}}')].specific.containers"
+          }
+          principalMappingPlugin {
+               pluginClass: "it.agilelab.plugin.principalsmapping.impl.azure.AzureMapperFactory"
+               azure: {
+                  tenantId: ${?PRINCIPAL_MAPPING_TENANT_ID}
+                  clientId: ${?PRINCIPAL_MAPPING_CLIENT_ID}
+                  clientSecret: ${?PRINCIPAL_MAPPING_CLIENT_SECRET}
+               }
+          }
+          backendConfigs: {
+            stateKey = "key"
+            configs = {
+              key = "$.dataProduct.components[?(@.id == '{{componentIdToProvision}}')].specific.state.key"
+            }
+          }
+        }
+        "urn:dmb:utm:azure-storage-adlsgen2-template-import:0.0.0" {
+          repositoryPath: "/tf/adls-gen2-import"
+          descriptorToVariablesMapping: {
+            dp_domain = "$.dataProduct.components[?(@.id == '{{componentIdToProvision}}')].specific.component.dpDomain"
+            dp_name_major_version = "$.dataProduct.components[?(@.id == '{{componentIdToProvision}}')].specific.component.dpNameMajorVersion"
+            component_name = "$.dataProduct.components[?(@.id == '{{componentIdToProvision}}')].specific.component.name"
+            storage_account_name = "$.dataProduct.components[?(@.id == '{{componentIdToProvision}}')].specific.storageAccountName"
+            resource_group = "$.dataProduct.components[?(@.id == '{{componentIdToProvision}}')].specific.resourceGroup"
+            location = "$.dataProduct.components[?(@.id == '{{componentIdToProvision}}')].specific.location"
             account_tier = "$.dataProduct.components[?(@.id == '{{componentIdToProvision}}')].specific.performance"
             account_replication_type = "$.dataProduct.components[?(@.id == '{{componentIdToProvision}}')].specific.redundancy"
             access_tier = "$.dataProduct.components[?(@.id == '{{componentIdToProvision}}')].specific.accessTier"
